--- a/FinalReport.Rmd
+++ b/FinalReport.Rmd
@@ -28,7 +28,7 @@ Medicare is one of the largest drivers of consumption and spending in the United
 
 The United States Medicare program is a federal health insurance program that services predominately people ages 65 years and older. As of 2020, over 62.6 million people are enrolled with a projected increase of 50% over the next decade as all of the members of the "Baby Boomer" generation reach the qualifying age. Care for this population will put tremendous strain on the healthcare system, and it will become crucial to maximize individual participation in preventative health measures to reduce this burden. 
 
-Caring for flu patients is one of those strenuous healthcare activities that can be reduced by vaccinations. Flu illness routinely hospitalizes hundreds of thousands of people every year, seasonal flu vaccination is estimated to reduce the risk of having to seek medical treatment by 40-60%. The Medicare population is a high proportion of these cases as they are a large proportion of the broader US population. However there are differences in the enrollment rates per state, which is important to take into consideration. It is also important to explore comparisons in the settings in which people get vaccinated, through either an individual provider such as a primary care physician or an organization like a local drug store, in order to understand how best to reach this population from a public health messaging standpoint.
+Caring for flu patients is one of those strenuous healthcare activities that can be reduced by vaccinations. Flu illness routinely hospitalizes hundreds of thousands of people every year, seasonal flu vaccination is estimated to reduce the risk of having to seek medical treatment by 40-60%. The Medicare population is a high proportion of these cases as they are a large proportion of the broader US population. However there are differences in the enrollment rates per state, which is important to take into consideration. An additional comparison worth exploring is the means by which Medicare patients pursue vaccinations in these state groupings; if more beneficiaries are getting vaccinated through organizations such as a local CVS pharmacy or their individual healthcare provider, this creates different avenues through which public health campaigns may be more effective.
 
 Multilevel poisson modeling is used to assess these comparisons in flu vaccinations rates among this population.
 
